# Corewar

./: asm.h  init_struct.c  main.c  op.h  valid_first_part.c  validation.c
asm/: CMakeLists.txt  Makefile  asm  asm.h  ft_support_func.c  init_struct.c  main.c  op.h  valid_first_part.c  validation.c
asm/champs/: .Asombra.s.swp  Asombra.cor  ]  toto.cor  toto.s
asm/generate_bytecode/: generate_bytecode.c  get_coding_byte.c  get_indir_tdir.c  get_label_bytecode.c  get_magic.c  get_prog_size.c  is_dir_indir_reg.c  write_code_to_file.c
asm/libft/: ft_bzero.c  ft_isalnum.c  ft_itoa.c  ft_itoa_base.c  ft_lstnew.c  ft_memcmp.c  ft_memdel.c  ft_memmove.c  ft_putnbr.c  ft_putnbr_fd.c  ft_sqrt.c  ft_strequ.c  ft_striteri.c  ft_strjoin.c  ft_strncat.c  ft_strncmp.c  ft_strstr.c  ft_strsub.c  ft_tolower.c  ft_toupper.c  libft.h
asm/parsing/: parse_args.c  parse_label.c  parse_main.c  parse_name_comment.c
asm/support_functions/: bonus_funcs.c  clean_trash.c  ft_support_func.c  init_struct.c  support_functions_two.c
asm/validation/: check_conformity.c  check_filename.c  valid_name_comment.c  valid_name_comment_min.c  validate_args.c  validate_commands.c  validate_content.c  validate_label.c  validation.c
cor/: CMakeLists.txt  Makefile  check_champ.c  cor.h  corewar  create_arena.c  create_cursor.c  ft_support_func.c  get_index.c  init_great_war.c  init_struct.c  main.c  manage_functions.c  ncurses.c  op.h  parse_champ.c  parsing.c  validate_commands.c
cor/champs/: ttt.cor  ttt.s
cor/init_map/: create_arena.c  create_cursor.c
cor/libft/: Makefile  ft_atoi_base.c  ft_isascii.c  ft_lstadd.c  ft_lstdel.c  ft_memset.c  ft_putendl_fd.c  ft_strcat.c  ft_strclr.c  ft_strcmp.c  ft_strdel.c  ft_strmapi.c  ft_strnew.c  ft_strnstr.c  ft_strstr.c  joinfree.c  libft.h
cor/libft/ft_printf/: ft_is.c  ft_printf.c  ft_printf.h  get_binary_str.c  get_hex_str.c
cor/ncurses/: colors.c  end_game.c  init_window.c  ncurses.c
cor/parsing/: check_champ.c  parse_args.c  parse_champ.c  parse_flags.c
cor/procesing_fight/: declare_winner.c  dump_corewar.c  manage_functions.c
cor/processing_fight/: declare_winner.c  dump_corewar.c  get_args_from_map.c  get_reg.c  init_great_war.c  kill_cursor.c  manage_functions.c  move_cursor.c
cor/support_functions/: ft_support_func.c  init_struct.c  work_with_binary.c
cor/validation/: validate_commands_first.c  validate_commands_main.c  validate_commands_second.c
cor/vm_functions/: lldi_lld_lfork_fork.c  or_and_sub_add.c  st_ld_live.c  sti_ldi_zjump_xor.c
corewar.tmp/: asmm
corewar.tmp/champs/: quine.cor
libft/: Makefile  ft_atoi.c  ft_atoi_base.c  ft_isdigit.c  ft_isprint.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcpy.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putstr.c  ft_putstr_fd.c  ft_range.c  ft_strchr.c  ft_strcpy.c  ft_strdup.c  ft_striter.c  ft_strjfree.c  ft_strlcat.c  ft_strlen.c  ft_strmap.c  ft_strncpy.c  ft_strnequ.c  ft_strrchr.c  ft_strsplit.c  ft_strtrim.c  get_next_line.c  libft.h
libft/ft_printf/: additional_functions_number.c  additional_print_wc_ws.c  additional_u.c  additional_wchar.c  check_struct.c  ft_printf.c  ft_printf.h  handle_size.c  lib_functions.c  lib_functions2.c  number_width_precision.c  print_d_i_o_x.c  print_s_c.c  print_wc_ws.c  record_struct.c  (+4 more)
(+74 files in other folders)
