cmake_minimum_required(VERSION 3.9)
project(VirtualMachine)

set(CMAKE_CXX_STANDARD 11)

add_executable(VirtualMachine
        libft/ft_printf/convert_to_str.c
        libft/ft_printf/ft_addit.c
        libft/ft_printf/ft_is.c
        libft/ft_printf/ft_parse.c
        libft/ft_printf/ft_printf.c
        libft/ft_printf/ft_printf.h
        libft/ft_printf/get_binary_str.c
        libft/ft_printf/get_decimal_str.c
        libft/ft_printf/get_hex_str.c
        libft/ft_printf/get_octal_str.c
        libft/ft_printf/number_width_precision.c
        libft/ft_printf/print_char.c
        libft/ft_printf/print_number.c
        libft/ft_printf/print_pointer.c
        libft/ft_printf/print_string.c
        libft/ft_atoi.c
        libft/ft_atoi_base.c
        libft/ft_bzero.c
        libft/ft_isalnum.c
        libft/ft_isalpha.c
        libft/ft_isascii.c
        libft/ft_isdigit.c
        libft/ft_isprint.c
        libft/ft_itoa.c
        libft/ft_itoa_base.c
        libft/ft_lstadd.c
        libft/ft_lstdel.c
        libft/ft_lstdelone.c
        libft/ft_lstiter.c
        libft/ft_lstmap.c
        libft/ft_lstnew.c
        libft/ft_memalloc.c
        libft/ft_memccpy.c
        libft/ft_memchr.c
        libft/ft_memcmp.c
        libft/ft_memcpy.c
        libft/ft_memdel.c
        libft/ft_memmove.c
        libft/ft_memset.c
        libft/ft_putchar.c
        libft/ft_putchar_fd.c
        libft/ft_putendl.c
        libft/ft_putendl_fd.c
        libft/ft_putnbr.c
        libft/ft_putnbr_fd.c
        libft/ft_putstr.c
        libft/ft_putstr_fd.c
        libft/ft_range.c
        libft/ft_sqrt.c
        libft/ft_strcat.c
        libft/ft_strchr.c
        libft/ft_strclr.c
        libft/ft_strcmp.c
        libft/ft_strcpy.c
        libft/ft_strdel.c
        libft/ft_strdup.c
        libft/ft_strequ.c
        libft/ft_striter.c
        libft/ft_striteri.c
        libft/ft_strjoin.c
        libft/ft_strlcat.c
        libft/ft_strlen.c
        libft/ft_strmap.c
        libft/ft_strmapi.c
        libft/ft_strncat.c
        libft/ft_strncmp.c
        libft/ft_strncpy.c
        libft/ft_strnequ.c
        libft/ft_strnew.c
        libft/ft_strnstr.c
        libft/ft_strrchr.c
        libft/ft_strsplit.c
        libft/ft_strstr.c
        libft/ft_strsub.c
        libft/ft_strtrim.c
        libft/ft_tolower.c
        libft/ft_toupper.c
        libft/get_next_line.c
        libft/joinfree.c
        libft/libft.h
        cor.h
        support_functions/ft_support_func.c
        support_functions/init_struct.c
        main.c
        op.h parsing/parse_champ.c parsing/check_champ.c init_map/create_arena.c procesing_fight/init_great_war.c init_map/create_cursor.c procesing_fight/manage_functions.c parsing/parse_args.c parsing/parse_flags.c support_functions/work_with_binary.c validation/validate_commands_first.c validation/validate_commands_second.c validation/validate_commands_main.c vm_functions/lldi_lld_lfork_fork.c vm_functions/or_and_sub_add.c vm_functions/st_ld_live.c vm_functions/sti_ldi_zjump_xor.c procesing_fight/get_args_from_map.c procesing_fight/get_reg.c procesing_fight/move_cursor.c procesing_fight/dump_corewar.c procesing_fight/kill_cursor.c procesing_fight/declare_winner.c)
